aggiunta cartella manuale# Please enter the commit message for your changes. Lines starting

--- a/EDFM/data.pot
+++ b/EDFM/data.pot
@@ -1,13 +1,19 @@
-GridFile=./data/GRID_FINE_no_map.GRDECL         #nome fine della griglia
+#GridFile=./data/GRID_FINE_no_map.GRDECL         #nome fine della griglia
 #GridFile=./data/CP_grid.GRDECL         #nome fine della griglia
 #GridFile=./data/Cartesian_grid.GRDECL         #nome fine della griglia
+GridFile=./data/EP_Cart_metric.GRDECL      
+FractureFile=EP_longf_metriczp1.fab    #nome del file con le fratturec
+
+#GridFile=./data/gridTest      
+#FractureFile=lista_mia.fab    #nome del file con le fratturec
 
 #FractureFile=fract_new_well_metric.fab    #nome del file con le fratturec
 #FractureFile=fract_new_well_metric_vertS.fab    #nome del file con le fratturec
 #FractureFile=Long_fracture_rim_412_feetS.fab
 #FractureFile=rim_640_feet_vshort.fab   
-FractureFile=frac.fab    
-conv_z=-1   #=1 se le z della griglia e delle fratture sono concordi, altrimenti =-1 e converte 
+#FractureFile=frac.fab    
+conv_z=1   #=1 se le z della griglia e delle fratture sono concordi, altrimenti =-1 e converte 
+isOPT=no
 
 #-----------distorsione della griglia e delle fratture-------------------------------
 
@@ -23,11 +29,11 @@ direzioneF=x
 
 exportFractures=no
 exportFrGrids=yes
-exportGeoprop=no
+exportGeoprop=yes
 exportIntersections=no
 exportGrid=yes
 
 #-------------------percorso dei file di output---------------------------------------
 
-outpath=./output_frac
+outpath=./output_CG3
 
