--- a/EDFM/data.pot
+++ b/EDFM/data.pot
@@ -1,11 +1,11 @@
 #GridFile=./data/GRID_FINE_no_map.GRDECL         #nome fine della griglia
 #GridFile=./data/CP_grid_fine.GRDECL         #nome fine della griglia
 #GridFile=./data/Cartesian_grid.GRDECL         #nome fine della griglia
-GridFile=./data/EP_Cart_metric.GRDECL      
-FractureFile=EP_longf_metriczp.fab    #nome del file con le fratturec
+#GridFile=./data/EP_Cart_metric.GRDECL      
+#FractureFile=EP_longf_metriczp.fab    #nome del file con le fratturec
 
-#GridFile=./data/gridTest      
-#FractureFile=lista_mia.fab    #nome del file con le fratturec
+GridFile=./data/gridTest      
+FractureFile=./data/lista_mia2.fab    #nome del file con le fratturec
 
 #FractureFile=fract_new_well_metric.fab    #nome del file con le fratturec
 #FractureFile=fract_new_well_metric_vertS.fab    #nome del file con le fratturec
