Ranamed main program.
-Now it is called main_edfm.

-Introduced the macro OLD_PROPERTIES to compute
cut cell properties with the original algorithm

--- a/EDFM/README
+++ b/EDFM/README
@@ -57,3 +57,8 @@ E' possibile generare la documentazione della libreria in formato html lanciando
 
 Per rimuovere la documentazione basta lanciare il comando:
 > make clean_doc
+
+
+NOTA: Per calcolare le proprieta` delle faglie con l'algoritmo precedente lanciare 
+
+make old_properties
