--- a/FVCode3D/notes.tex
+++ b/FVCode3D/notes.tex
@@ -43,6 +43,7 @@ struct CompareWithTolerance
 \\ etc.
 }
 \end{lstlisting}
+\item Properties are linked to zones, that however I have still to understand how they are given. Probably from the mesh data.
 \end{enumerate}
 
 \end{document}
